# HuaLaoWei

./: .dockerignore  .env.dev  .gitattributes  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.override.yaml  issueCats.py  package-lock.json  package.json
ai_models/chatbot/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  api.py  app.py  config.py  docker-compose.yml  entrypoint.sh  main.py  ollama_entrypoint.sh  pyproject.toml  requirements.txt  save_cache.py  server.py  testcases.txt
ai_models/chatbot/data/acts/: acts_metadata.json
ai_models/chatbot/data/forms/: forms_metadata.json
ai_models/chatbot/data/penalities/: penalties_metadata.json
ai_models/chatbot/data/permits/: permits_metadata.json
ai_models/chatbot/data/train_val_data/: cohere_intent-type_train_data.csv  intent-type_train_data.csv  intent-type_val_data.csv
ai_models/chatbot/models/flash_reranker/: README.md  config.json
ai_models/chatbot/models/nllb_model/: config.json  generation_config.json  tokenizer_config.json
ai_models/chatbot/models/whisper_tiny/: config.json  generation_config.json
ai_models/chatbot/modules/: __init__.py  heuristics.py  indexer.py  intent.py  language.py  llm_loader.py  llm_modelarts.py  query_model.py  voice.py
ai_models/chatbot/notebooks/: 01_setup_ollama.ipynb  02_transcribing_service.ipynb  03_multilingual_processing.ipynb  04_intent_classifier.ipynb  05_setup_rag.ipynb  06_query_ragllm.ipynb  old_chat_with_upload_ui.ipynb  old_indexer_multimodal.ipynb  old_query_multimodal_rag.ipynb
ai_models/chatbot/scripts/: __init__.py  beautiflsoup_scrapper.py  save_cache.py  seed_vector_store.py
ai_models/chatbot/scripts/postgresql_setup/: 01_setup_db.py  02_generate_issues.py
ai_models/forecast_issue_count/: README.md  app.py  pyproject.toml
ai_models/forecast_issue_count/models/: Animals & Bird_model.pth  Construction Sites_model.pth  Drains & Sewers_model.pth  Others_model.pth  Pests_model.pth
ai_models/forecast_issue_count/notebooks/: 02_exploratory_data_analysis.ipynb  04_model_training_and_evaluation.ipynb
ai_models/forecast_issue_count/scripts/fetch_boundaries_in_us/: README.md
ai_models/forecast_issue_count/scripts/fetch_us_census_by_county/: config.yaml
ai_models/forecast_issue_count/scripts/open-meteo_weather_fetcher/: config.yaml
ai_models/forecast_issue_count/scripts/socrata_api_fetcher/: config.yaml  socrata_opendata_fetcher.py
ai_models/stfm_issue_count/: Dockerfile  pyproject.toml  server.py
ai_models/stfm_issue_count/models/: Drinking Water_model.pth  Smoking_model.pth
ai_models/stfm_issue_count/notebooks/: 01_data_loading_and_cleaning.ipynb  03_feature_engineering.ipynb
ai_models/stfm_issue_count/scripts/fetch_nearby_pois/: config.yaml
ai_models/stfm_issue_count/scripts/fetch_us_census_by_county/: census_socioeconomic_fetcher.py
ai_models/stfm_issue_count/scripts/identify_clusters_in_region/: latlong_clustering.py
ai_models/stfm_issue_count/scripts/open-meteo_weather_fetcher/: open-meteo_weather_fetcher.py
ai_models/vlm_issue_categoriser/: Dockerfile  README.md  app.py  pyproject.toml  server.py
ai_models/vlm_issue_categoriser/notebooks/: data_collection.ipynb
app/: _layout.tsx  create.jsx  (+5 more)
backend/: Dockerfile  main.py  pyproject.toml
backend/api/v1/endpoints/: auth.py  chatbot.py  comments.py  issues.py  posts.py  users.py  vlm_issue_categoriser.py
backend/core/: security.py
backend/crud/: auth.py  authorities.py  chatbot.py  comments.py  issues.py  media.py  posts.py  regions.py  users.py
backend/data_stores/: database.py  object_storage.py  resources.py
backend/models/: chatbot.py  comments.py  issues.py  posts.py  vlm_issue_categoriser.py
backend/services/chatbot/: service.py
backend/services/chatbot/modules/: indexer.py  intent.py  ollama_loader.py  query.py  report_form.py  session.py  speech.py
backend/services/issues/: service.py
backend/services/stfm_issue_count/: service.py
backend/services/stfm_issue_count/modules/: forecaster.py  geospatial.py  matrix.py  region.py  socioeconomic.py  temporal.py  weather.py
backend/services/vlm_issue_categoriser/: service.py
backend/services/vlm_issue_categoriser/modules/: extract_location.py  geo_tagger.py  query.py
dashboard/backend/: Dockerfile  README.md  main.py  pyproject.toml
dashboard/backend/crud/: forecast.py  issues.py  meta.py  subzone.py
dashboard/backend/db/: database.py
dashboard/backend/services/forecast/: service.py
data_stores/relational_db/: Dockerfile.db  Dockerfile.init_db  README.md  docker-compose.yaml  entrypoint_init_db.sh  pyproject.toml
data_stores/relational_db/schema/extensions/: 01_create_pg_http_extension.sql
data_stores/relational_db/schema/functions/: 01_update_issue_timestamp_function.sql  02_sync_agencies_with_authorities.sql  03_sync_town_councils_with_authorities.sql
data_stores/relational_db/schema/tables/: 00_system_config.sql  01_users.sql  02_agencies.sql  03_town_councils.sql  04_authorities.sql  04_planning_areas.sql  05_subzones.sql  06_issue_types.sql  07_issue_subtypes.sql  08_jurisdictions.sql  09_issue_cat_to_body_mappings.sql  09_jurisdictions.sql  10_issues.sql  11_issue_type_to_issue_mapping.sql  11_issues.sql  12_issue_subtype_to_issue_mapping.sql  13_issue_media_assets.sql  15_issue_status_history.sql  16_comments.sql  16_forum_posts.sql  18_votes.sql  19_chat_sessions.sql
data_stores/relational_db/schema/triggers/: 01_update_issue_timestamp_trigger.sql  02_issue_update_webhook.sql  03_update_agency_authorities.sql  (+1 more)
data_stores/vectorstore/: Dockerfile.init_vs  README.md  docker-compose.yaml  entrypoint_init_vs.sh  pyproject.toml  save_cache_init_vs.py  setup_init_vs.py  webhook_init_vs.py
mobile_app/backend/: Dockerfile  main.py  pyproject.toml
mobile_app/backend/core/: security.py
mobile_app/backend/crud/: auth.py  authorities.py  comments.py  issues.py  posts.py  regions.py  users.py
mobile_app/backend/models/: chatbot_input.py  comment_request.py  location.py  vlm_issue_categoriser_input.py
mobile_app/backend/schemas/: auth.py
(+319 files in other folders)
