[project]
name = "hualaowei-chatbot"
version = "0.1.0"
description = "HuaLaoWei Chatbot Service for municipal services in Singapore."
authors = [
    { name = "Woo Yan Seun", email = "wooyanseun@gmail.com" },
    { name = "Jerick Cheong", email = "jerickcheong@gmail.com" },
    { name = "Fleming Siow", email = "flemingsiow@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "requests>=2.32.3",
    "ffmpeg-python>=0.2.0",
    "python-jose>=3.4.0",
    "psycopg>=3.2.7",
    "pydantic>=2.11.4",
    "langchain-core>=0.3.59",
    "langid>=1.1.6",
    "minio>=7.2.15",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "weaviate-client>=4.14.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
    "geojson>=3.2.0",
    "turfpy>=0.0.8"
]

[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
