[project]
name = "hualaowei-chatbot"
version = "0.1.0"
description = "HuaLaoWei Chatbot Service for municipal services in Singapore."
authors = [{ name = "Fleming Siow", email = "flemingsiow@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
    "sentence-transformers>=4.1.0",
    "langid>=1.1.6",
    "FlashRank>=0.2.10",
    "requests>=2.32.3",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["."]
