[project]
name = "hualaowei-forecast-issue-count"
version = "0.1.0"
description = "HuaLaoWei's Forecasting Model (forecasting issue counts based on region and issue type) using TCN models."
authors = [{ name = "Fleming Siow", email = "flemingsiow@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "torch>=2.7.0",
    "numpy>=2.2.5", 
    "pydantic>=2.11.4"
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["."]