[project]
name = "vlm-issue-categoriser"
version = "0.1.0"
description = "HuaLaoWei's VLM for Issue Type and Severity Categorisation"
authors = [
    { name = "Jerick Cheong", email = "jerickcheong@gmail.com" },
    { name = "Fleming Siow", email = "flemingsiow@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "transformers",
    "peft",
    "accelerate",
    "fastapi",
    "uvicorn",
    "num2words>=0.5.10",
    "pyyaml>=6.0", 
    "pydantic>=2.7", 
    "python-dotenv>=1.0",
    "python-multipart>=0.0.5",
    "huggingface_hub[hf_xet]",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["."]
