[project]
name = "vlm-issue-categoriser"
version = "0.1.0"
description = "HuaLaoWei's VLM for Issue Type and Severity Categorisation"
authors = [
    { name = "Jerick Cheong", email = "jerickcheong@gmail.com" },
    { name = "Fleming Siow", email = "flemingsiow@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "peft>=0.15.2",
    "accelerate>=1.6.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "num2words>=0.5.14",
    "pyyaml>=6.0.2", 
    "pydantic>=2.11.4", 
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "huggingface_hub>=0.31.1",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["."]
