[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "municipal-dashboard-backend"
version = "1.0.0"
description = "Municipal Dashboard Backend - FastAPI Server"
authors = [{ name="Fleming Siow", email="your-email@example.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "asyncpg>=0.29.0",
    "psycopg-pool>=3.2.0",
    "aiohttp>=3.9.5",
    "python-dotenv>=1.0.1",
    "geojson>=3.1.0",
    "turfpy>=0.0.8"
]
requires-python = ">=3.11"
