[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hualaowei-relational-db"
version = "0.1.0"
description = "Seeder and configuration scripts for HuaLaoWei relational database."
authors = [
    { name = "Fleming Siow", email = "flemingsiow@gmail.com" }
]
dependencies = [
    "psycopg>=3.2.7", 
    "Faker>=37.1.0", 
    "shapely>=2.1.0", 
    "PyYAML>=6.0.2", 
    "pydantic>=2.11.4", 
    "python-dotenv>=1.1.0"
]
requires-python = ">=3.11"
