[project]
name = "hualaowei-vectorstore-webhook"
version = "0.1.0"
description = "Webhook server to update the vectorstore with embeddings from issue descriptions."
authors = [
    { name = "Fleming Siow", email = "flemingsiow@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "psycopg>=3.2.7",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.4", 
    "python-dotenv>=1.1.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["."]
